Exclude marked keys and lab card from infinite uses

--- a/config/config.json
+++ b/config/config.json
@@ -498,7 +498,16 @@
             "5c94bbff86f7747ee735c08f"
         ]
     },
-
+    "finiteKeysList":[
+      "5c94bbff86f7747ee735c08f",
+      "62987dfc402c7f69bf010923",
+      "5780cf7f2459777de4559322",
+      "5d80c60f86f77440373c4ece",
+      "5d80c62a86f7744036212b3f",
+      "5ede7a8229445733cb4c18e2",
+      "63a3a93f8a56922e82001f5d",
+      "64ccc25f95763a1ae376e447"
+    ],
     "debug": {
         "log_missing_keys": false,
         "give_profile_all_keys": false,
