--- a/config/config.json
+++ b/config/config.json
@@ -145,7 +145,7 @@
         "id": "Golden_Keychain1",
         "item_name": "Golden Keychain Mk. I",
         "item_short_name": "Mk. I",
-        "item_description": "One of 3 gold keychains. This one contains all Factory, Woods, Customs, Interchange, and Misc keys.",
+        "item_description": "One of 3 gold keychains. This one contains all Ground Zero, Factory, Woods, Customs, Interchange, and Misc keys.",
         "flea_price": 1000000,
         "flea_banned": true,
         "sound": "keys",
@@ -182,15 +182,17 @@
 
 
         "slot_ids": [
+            "658199aa38c79576a2569e13",
+            "6581998038c79576a2569e11",
+            "658199972dc4e60f6d556a2f",
+
             "5448ba0b4bdc2d02308b456c",
             "57a349b2245977762b199ec7",
             "593858c486f774253a24cb52",
 
-
             "591afe0186f77431bd616a11",
             "591ae8f986f77406f854be45",
             "5d08d21286f774736e7c94c3",
-
 
             "5938994586f774523a425196",
             "5914578086f774123569ffa4",
@@ -205,14 +207,12 @@
             "5780cf722459777a5108b9a1",
             "5780cf7f2459777de4559322",
             "5780cf692459777de4559321",
-            
             "59136a4486f774447a1ed172",
             "591383f186f7744a4c5edcf3",
             "591382d986f774465a6413a7",
             "59136e1e86f774432f15d133",
             "59387a4986f77401cc236e62",
             "5938603e86f77435642354f4",
-            
             "5780d0652459777df90dcb74",
             "5913877a86f774432f15d444",
             "5780d07a2459777de4559324",
@@ -409,8 +409,13 @@
             "64ccc1d4a0f13c24561edf27",            "64ccc1f4ff54fb38131acf27",
             "63a71e922b25f7513905ca20",
             "63a71e86b7f4570d3a293169",
-            
             "63a71eb5b7f4570d3a29316b",            "63a71ed21031ac76fe773c7f",
+            "64ccc1fe088064307e14a6f7",            "64ccc206793ca11c8f450a38",
+            "64ccc2111779ad6ba200a139",            "64ccc246ff54fb38131acf29",
+            "64ccc24de61ea448b507d34d",            "64d4b23dc1b37504b41ac2b6",
+            "64ccc268c41e91416064ebc7",            "64ce572331dd890873175115",
+            "64ccc25f95763a1ae376e447",
+
             "5d80c60f86f77440373c4ece",            "5d80c62a86f7744036212b3f",
             "5d80c66d86f774405611c7d6",            "5d80c6c586f77440351beef1",
             "5d80c6fc86f774403a401e3c",            "5d80c78786f774403a401e3e",
@@ -426,13 +431,9 @@
             "5d95d6fa86f77424484aa5e9",            "5d9f1fa686f774726974a992",
             "5da46e3886f774653b7a83fe",            "5da5cdcd86f774529238fb9b",
             "5ede7a8229445733cb4c18e2",            "5ede7b0c6d23e5473e6e8c66",
+
             "5c1e2a1e86f77431ea0ea84c",          
-            "5c1f79a086f7746ed066fb8f",            "5c1e2d1f86f77431e9280bee",
-            "64ccc1fe088064307e14a6f7",            "64ccc206793ca11c8f450a38",
-            "64ccc2111779ad6ba200a139",            "64ccc246ff54fb38131acf29",
-            "64ccc24de61ea448b507d34d",            "64d4b23dc1b37504b41ac2b6",
-            "64ccc268c41e91416064ebc7",            "64ce572331dd890873175115",
-            "64ccc25f95763a1ae376e447"
+            "5c1f79a086f7746ed066fb8f",            "5c1e2d1f86f77431e9280bee"
         ]
     },
 
