Make finite keys list togglable, off by default Make finite keys list name match existing config names

--- a/config/config.json
+++ b/config/config.json
@@ -499,7 +499,8 @@
             "5c94bbff86f7747ee735c08f"
         ]
     },
-    "finiteKeysList":[
+    "use_finite_keys_list": false,
+    "finite_keys_list":[
       "5c94bbff86f7747ee735c08f",
       "62987dfc402c7f69bf010923",
       "5780cf7f2459777de4559322",
